src/app/common/components/dropdown-menu/dropdown-menu.component.scss
m-dropdownMenu {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;

  a {
    font: inherit;
    color: inherit;
  }

  .m-dropdownMenu__trigger {
    flex: 1;

    &.m-dropdownMenuTrigger--clickable {
      cursor: pointer;
    }
  }

  .m-dropdownMenu__menu {
    display: none;
    z-index: 10010;

    @media screen and (min-width: $max-mobile + 1) {
      display: block;
      position: absolute;
      top: 0;
      left: 0;
    }

    @media screen and (max-width: $max-mobile) {
      display: flex;
      align-items: center;
      justify-content: center;
      position: fixed;
      top: 2vh;
      right: 2vw;
      bottom: 2vh;
      left: 2vw;
    }

    ul {
      width: 100%;
      list-style: none;
      margin: 0;
      padding: 14px 0;
      border-radius: 2px;
      min-width: 222px;

      @include m-theme() {
        background: themed($m-bgColor--secondary);
      }

      @include m-on-theme(light) {
        box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.35);
      }

      @include m-on-theme(dark) {
        box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
      }

      > li {
        display: flex;
        align-items: center;
        justify-content: flex-start;
        font-size: 15px;
        line-height: 34px;
        white-space: nowrap;
        cursor: pointer;
        background: transparent;

        @include m-theme() {
          color: themed($m-textColor--primary);

          &:hover,
          &:active {
            background: themed($m-bgColor--primary);
          }
        }

        > * {
          flex: 1;
          margin: 0;
          padding: 0 11px;
        }

        .m-dropdownMenu__item {
          display: flex;
          align-items: center;
          justify-content: space-between;

          m-icon + span,
          span + m-icon {
            margin-left: 11px;
          }
        }
      }
    }
  }

  > m-overlay {
    z-index: 10000;

    @media screen and (max-width: $max-mobile) {
      @include m-on-theme(light) {
        background: rgba(255, 255, 255, 0.85);
      }

      @include m-on-theme(dark) {
        background: rgba(0, 0, 0, 0.65);
      }
    }
  }
}

